# polars-mcp

./: .gitignore  LICENSE  README.md  polars_mcp.py  pyproject.toml
guides/: contexts.md  expressions.md  lazy-api.md  pandas-to-polars.md
