[project]
name = "polars-mcp"
version = "0.1.1"
description = "MCP server providing Polars API reference via introspection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "polars>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
polars-mcp = "polars_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["polars_mcp.py"]

[tool.hatch.build.targets.wheel.force-include]
"guides" = "guides"

[tool.hatch.build.targets.sdist]
include = [
    "polars_mcp.py",
    "guides/",
    "README.md",
]
